# csa_lab4

./: .gitignore  README.md  golden_test.py  isa.py  lab4-task.md  machine.py  microcode.py  pyproject.toml  translator.py
.github/workflows/: ci.yml
examples/: input.txt
examples/cache_test/: cache_test.bin.txt  cache_test.f
examples/cat/: cat.bin.txt  cat.f
examples/double_add/: double-add.bin.txt  double-add.f
examples/euler6/: euler6.bin.txt  euler6.f
examples/hello/: hello.bin.txt  hello.f
examples/hello_user_name/: hello_user_name.f  hellous.bin.txt
examples/sort/: sort.bin.txt  sort.f
golden/: cache_test.yml  cat.yml  double_add.yml  euler6.yml  hello.yml  hello_user_name.yml  sort.yml
