[tool.poetry]
name = "csa-lab4"
version = "0.1.0"
description = "CSA Lab 4"
authors = ["Dmitriev Denis"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pytest-golden = "^0.2.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Конфигурации для инструментов ---
[tool.ruff]
line-length = 88
exclude = [ ".venv", "__pypackages__", ".git", "build", "dist", "golden" ]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "B", "A"]
ignore = ["ANN", "D", "E501", "B008"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [ "." ]